finished teams section with responsive

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                 <h3 class="teams-title">
                     <span class="quick-list">Quick list</span>
-                    <span>of Our</span>
+                    <span>of Our</span><br>
                     <span class="features">Features</span>
                 </h3>
 
@@ -64,6 +64,7 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- teams sections end -->
     </main>
 
     <footer>
