--- a/index.html
+++ b/index.html
@@ -108,6 +108,24 @@
 
         </section>
         <!-- facts section end -->
+
+        <!--Sponsors section start-->
+        <section class="sponsors-container">
+            <h3 class="sponsors-title">Our Sponsors</h3>
+
+            <p class="sponsors-description">
+                There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.
+            </p>
+
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+        <!--Sponsors section end-->
     </main>
 
     <footer>
